# JobbEBPF

./: 26_643.МРАГ.00060-01_Модуль_сбора_и_отображения_статистики_eBPF.docx  26_643.МРАГ.00060-01_Модуль_сбора_и_отображения_статистики_eBPF.md  _bulk_keep_attached.ps1  text.docx  text.md
01_BPF_PROG_TYPE_CGROUP_DEVICE/: 01_BPF_PROG_TYPE_CGROUP_DEVICE_Программа_и_методика_испытаний.md  643.МРАГ.00035-01 12 01 BPF_PROG_TYPE_CGROUP_DEVICE_Текст_программы.docx  643.МРАГ.00035-01 20 01 BPF_PROG_TYPE_CGROUP_DEVICE_Ведомость_эксплуатационных_документов.docx  643.МРАГ.00035-01 30 01 BPF_PROG_TYPE_CGROUP_DEVICE_Формуляр.docx  643.МРАГ.00035-01 33 01 BPF_PROG_TYPE_CGROUP_DEVICE_Руководство программиста.docx  643.МРАГ.00035-01 51 01 BPF_PROG_TYPE_CGROUP_DEVICE_Программа_и_методика_испытаний.docx  643.МРАГ.00035-01 BPF_PROG_TYPE_CGROUP_DEVICE_Спецификация.docx  643.МРАГ.00035-01 BPF_PROG_TYPE_CGROUP_DEVICE_Техническое_задание.docx  METHODS_TESTING.md  cgroup_dev.bpf.c  cgroup_dev.c
02_BPF_PROG_TYPE_CGROUP_SKB/: 02_BPF_PROG_TYPE_CGROUP_SKB_Программа_и_методика_испытаний.md  643.МРАГ.00036-01 12 01 BPF_PROG_TYPE_CGROUP_SKB_Текст_программы.docx  643.МРАГ.00036-01 20 01 BPF_PROG_TYPE_CGROUP_SKB_Ведомость_эксплуатационных_документов.docx  643.МРАГ.00036-01 30 01 BPF_PROG_TYPE_CGROUP_SKB_Формуляр.docx  643.МРАГ.00036-01 33 01 BPF_PROG_TYPE_CGROUP_SKB_Руководство программиста.docx  643.МРАГ.00036-01 51 01 BPF_PROG_TYPE_CGROUP_SKB_Программа_и_методика_испытаний.docx  cgroup_skb.bpf.c  cgroup_skb.c  (+3 more)
ebpf-tui/: Cargo.toml  README.md
ebpf-tui/src/: discovery.rs  main.rs  runner.rs  ui.rs
(+239 files in other folders)
